# board-cli

./: .gitignore  API_INTEGRATION.md  Cargo.toml  README.md  TUI_IMPLEMENTATION.md  config.example.toml
docs/superpowers/specs/: 2026-03-26-persistent-config-design.md
src/: lib.rs  main.rs
src/api/: client.rs  error.rs  mod.rs  types.rs
src/cli/: mod.rs
src/config/: mod.rs
src/error/: mod.rs
src/tui/: mod.rs  tests.rs
