[package]
name = "board-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "board"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Directory utilities
dirs = "5.0"

# Async runtime (optional, for future expansion)
tokio = { version = "1.0", features = ["full"], optional = true }

[features]
default = []
async = ["tokio"]
