[package]
name = "board-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "board"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Directory utilities
dirs = "5.0"

# HTTP client for API
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"

# Async runtime (now required for API client)
tokio = { version = "1.0", features = ["full"] }

# Clipboard functionality (optional, graceful fallback if unavailable)
arboard = { version = "3.4", optional = true }

[features]
default = ["clipboard"]
clipboard = ["arboard"]
